Fixed cropping the invite dialog's shadow since them dialog is now inside the content.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1516,7 +1516,6 @@ room-content-margin-height = 10px
   left room-sidebar-width
   box-sizing border-box
   height 100%
-  overflow hidden
   border room-content-margin-width solid transparent
   border-top-width room-content-margin-height
   border-bottom-width room-content-margin-height
